自治体　新規登録画面　バリデーションエラー一部日本語化

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -1,7 +1,7 @@
 ja:
   activerecord:
     attributes:
-      user:
+      volunteer:
         confirmation_sent_at: パスワード確認送信時刻
         confirmation_token: パスワード確認用トークン
         confirmed_at: パスワード確認時刻
@@ -25,8 +25,14 @@ ja:
         unconfirmed_email: 未確認Eメール
         unlock_token: ロック解除用トークン
         updated_at: 更新日
+      local_government:
+        email: メールアドレス
+        password: パスワード
+        name: 自治体名
+        population: 人口
     models:
-      user: ユーザー
+      local_government: 自治体
+      volunteer: ボランティア
   devise:
     confirmations:
       confirmed: メールアドレスが確認できました。
